<resources>

    <string name="top">top</string>
    <string name="logo">logo</string>
    <string name="cart">cart</string>
    <string name="user">user</string>
    <string name="main">main</string>
    <string name="order">order</string>
    <string name="orderCount">order count</string>
    <string name="pendingOrders">pending orders</string>
    <string name="rider">rider</string>
    <string name="riderCount">rider count</string>
    <string name="freeRiders">free riders</string>
    <string name="assignRider">assign rider</string>
    <string name="addRider">add rider</string>
    <string name="viewRider">view rider</string>
    <string name="_25">25</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="_8">8</string>
    <string name="free_riders">Free Riders</string>
    <string name="assign_rider">Assign Rider</string>
    <string name="view_riders">View Rider</string>
    <string name="tel_no">Tel No :</string>
    <string name="address">Address :</string>
    <string name="name">Name :</string>
    <string name="driving_l_no">Driving L.No :</string>
    <string name="experiences">Experiences :</string>
    <string name="add_rider">Add Rider</string>
    <string name="qualification">Qualification :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>
    <string name="riderName">Amarabandu</string>
    <string name="DLNo">B1234567</string>
    <string name="riderAddress">519/c,Aggona, Mulleriyawa</string>
    <string name="riderTel">0777123456</string>
    <string name="riderExpe">driving experince - 3years</string>
    <string name="riderQuli">English, Sinhala</string>
    <string name="login_topic">Welcome to Smart Fashion</string>
    <string name="login">Login</string>
    <string name="userName">Username</string>
    <string name="passwordLogin">Password</string>
    <string name="signinGuide">Do you want to Sign In?</string>
    <string name="HintName">Enter Name</string>

    <string name="HNIC">NIC</string>

    <string name="Haddress">Enter Address</string>

    <string name="Hage">Enter age</string>

    <string name="PNO">+94*********</string>

    <string name="Hnic">enter nic</string>

    <string name="Dname">Enter name</string>

    <string name="hintname">Name</string>

    <string name="UN">Enter value</string>
    <string name="NIC">NIC</string>
    <string name="AD">Address</string>
    <string name="age">Enter age</string>
    <string name="CNo">+94********</string>
    <string name="ADD">ADD</string>
    <string name="reset">Reset</string>

    <string name="uid">User\'s ID</string>
    <string name="age_a">Age</string>

    <string name="Contact_no">Contact_NO</string>
    <string name="Update_page">Update Page</string>
    <string name="ADD_User">ADD User Page</string>
    <string name="Delete_page">Delete Page</string>


    <string name="app_name">Smart Fashion</string>

    <string name="pid"> Enter product ID</string>

    <string name="pname">Enter product name</string>

    <string name="sizes">Enter product sizes</string>

    <string name="price">Enter product price</string>

    <string name="post_product_to_page">Post</string>

    <string name="add_product_title">Add Product</string>

    <string name="add_product_image">Add Image</string>

    <string name="product_id">001</string>

    <string name="product_name">Casual Pink Dress</string>

    <string name="product_price">RS 1000</string>

    <string name="product_description">High neck fashion dress</string>

    <string name="update_product_title">Update Product</string>

    <string name="update_button">Update</string>

    <string name="category">Category</string>

    <string name="tshirt">Long Dress with flower print</string>

    <string name="deleteproduct">Delete</string>

    <string name="colors">Enter product colors</string>

    <string name="save">Save</string>

    <string name="size">Small</string>

    <string name="color">Blue and Pink</string>

    <string name="img1">img</string>


    <string name="menuList" />

    <string name="logiIcon" />

    <string name="searchIcon" />

    <string name="coverImage" />

    <string name="newArrivals">NEW ARRIVALS</string>

    <string name="clothsCategory" />

    <string name="womenCloths">Women</string>

    <string name="womenCloth1" />

    <string name="womenCloth2" />

    <string name="womencloth3" />

    <string name="womenCloth4" />

    <string name="menCloths">Men</string>

    <string name="Mencloth1" />

    <string name="menCloth1" />

    <string name="menCloth2" />

    <string name="menCloth3" />

    <string name="menCloth4" />

    <string name="NumOfItems">Bag(3Items)</string>

    <string name="bagItems" />

    <string name="ShoppingCart" />

    <string name="bagItemOne" />

    <string name="updateBtn">UPDATE</string>

    <string name="sumryTopic">ORDER SUMMARY</string>

    <string name="SubTot">"Sub Total : "</string>

    <string name="placeOrder">Place Order</string>

    <string name="price2">"Price : "</string>


    <string name="totalItems">Bag(1Item)</string>

    <string name="editimg" />

    <string name="delteImg" />

    <string name="blousName">Sleevless Top</string>

    <string name="blouseName" />

    <string name="price1">Price</string>

    <string name="rs">Rs.1750.00</string>


    <string name="clr">Color</string>

    <string name="clor">"Color : "</string>

    <string name="colortype">Yellow</string>

    <string name="size1">"Size : "</string>

    <string name="sizetyp">L</string>

    <string name="btn">SAVE</string>

    <string name="edit">editItems</string>

    <string name="butn">UPDATE</string>

    <string name="itmsize">Size</string>

    <string name="iName">Item Name :</string>

    <string name="detail1">Sub Total : LKR.1750.00</string>

    <string name="Shippingfee">Shipping : LKR.0.00</string>

    <string name="tot">Total : LKR.0.00</string>

    <string name="visaMaster">Pay with Visa/Master</string>

    <string name="btngroup" />

    <string name="amex">American Express</string>

    <string name="visaMastCard" />

    <string name="amexCard" />

    <string name="pay">Pay Now</string>

    <string name="payNow" />

    <string name="btnsave">SAVE</string>

    <string name="add1">ADD</string>

    <string name="add2">ADD</string>

    <string name="add3">ADD</string>

    <string name="add4">ADD</string>

    <string name="add5">ADD</string>

    <string name="add6">ADD</string>

    <string name="add7">ADD</string>

    <string name="add8">ADD</string>

    <string name="newWomenCloth1" />

    <string name="newArrivalWomen">Women</string>

    <string name="newWCloth1" />

    <string name="newWCloth2" />

    <string name="newWCloth3" />

    <string name="newWCloth5" />

    <string name="newWCloth4">newWCloth4</string>

    <string name="newArrivalMen">Men</string>

    <string name="newMCloth1" />

    <string name="newMCloth2" />

    <string name="newMCloth3" />

    <string name="newMCloth4" />

    <string name="newMclothPrice1">"Price : "</string>

    <string name="WClothLKR">LKR 1750.00</string>

    <string name="addWomenCloth1">ADD</string>

    <string name="addWomenCloth2">addWomenCloth2</string>

    <string name="addWomencloth2">ADD</string>

    <string name="addWCloth3">ADD</string>

    <string name="addWCloth4">ADD</string>

    <string name="WClothLKR2" />

    <string name="newMClothPrice3" />

    <string name="newMClothPrice4" />

    <string name="newMclothPrice2">"Price : "</string>

    <string name="newMClothPrice2">"Price : "</string>

    <string name="updatePageLKR">LKR 1750.00</string>

    <string name="QTY">Qty</string>

    <string name="quantity">Qty</string>

    <string name="quanti">"Qty : "</string>

    <string name="qtyNumber">2</string>

    <string name="itemName">Sleaveless top</string>

    <string name="ClotheType">Linen Top</string>

    <string name="ItemCode">"CodeNo : "</string>

    <string name="CodeNum">A001</string>


    <string name="ShopName">Smart Fashion</string>

    <string name="shopName">Smart Fashion</string>

    <string name="already_have_an_account_login">Already have an Account? Login</string>

    <string name="LIVE_WITH_A_GRATEFUL_Heart">LIVE WITH A GRATEFUL Heart </string>

    <string name="join_now">Join Now</string>

    <string name="phone_number">Phone Number</string>

    <string name="BgImage" />

    <string name="signOutButton" />
    <string name="deleteAll">delete all</string>
    <string name="CusDetails">Customer Details</string>
    <string name="deleteDetails">Delete</string>
    <string name="priceTg1">Rs.1250.00</string>
    <string name="priceTg2">Rs.1500.00</string>
    <string name="priceTg">Rs.1650.00</string>
    <string name="pricetg">Rs.1250.00</string>
    <string name="priceTg5">Rs.2700.00</string>
    <string name="pricetg6">Rs.1890.00</string>
    <string name="pricetg7">Rs.1450.00</string>
    <string name="pricetg8">Rs.1050.00</string>
    <string name="pricetg3">rs.1850.00</string>
    <string name="pricetg4">Rs.1450.00</string>
    <string name="user_profile">User Profile</string>

</resources>